tests/vrs/interface/interface_04_register_wrong_separator_expected.txt
error: expected `}`, found `;`
     --> tests/vrs/interface/interface_04_register_wrong_separator.vrs:3:22
      |
    3 |          reg foo [ 8 ];
      |                       ^ help: add `}` here.
